css/media.css
@media screen and (700px <= width < 1000px){
    .media-scroller{
        grid-auto-columns: calc(33.3% - 1.3vw);
    }
}
@media screen and (width > 2000px){
    .media-scroller{
        grid-auto-columns: calc(16.67% - 1.67vw);
    }
}
@media screen and (2000px >= width >= 1000px) {
/* IMAGE HOVER-FRAMES */
    .hover-frame {
        &::before,
        &::after {
            content: '';
            position: absolute;
            top: 1.25rem;
            bottom: 1.25rem;
            left: 1.25rem;
            right: 1.25rem;
        }
        &::before {
            border-top: 1px solid white;
            border-bottom: 1px solid white;
            transform: scale(0, 1);
            transition: transform ease-out .25s;
        }
        &:hover::before {
            transform: scale(1.05, 1);
        }
        &::after{
            border-left: 1px solid white;
            border-right: 1px solid white;
            transform: scale(1, 0);
            transition: transform ease-out .25s;
        }
        &:hover::after {
            transform: scale(1, 1.05);
        }
    }
    /* *************** */
    /* PROFILE PIC/BUTTON HOVER + FOOTER LOOKS */
    .trigger:hover {
        scale: 1.1;
        box-shadow: 0 0 5px black;
        transition: all .2s;
        cursor: pointer;
    }
    .trigger:active {
        scale: 1;
        box-shadow: inset 0 0 5px black;
    }
    footer img:hover{
        scale: 1.1;
        transition: scale .2s;
    }
    .footer-links {
        width: 50%;
    }
    /* ************************************* */
    .close:hover {
        cursor: pointer;
        color: rgba(0, 0, 0, 0.61);
    }
    /* ************* */
    /* PROFILE PICTURE */
    .image-wrapper {
        background: rgb(31, 30, 30);
        height: fit-content;
        position: relative;
    }
    .image-wrapper div {
        font-size: 1.5rem;
        font-weight: 900;
        padding: 1rem 3rem;
        background-color: white;
        color: black;
        outline: 0;
        border: none;
        border-radius: 10px;
        box-shadow: 0 0 10px black;
        display: block;
    }
    .image-wrapper a {
        text-decoration: none;
        position: absolute;
        z-index: 1;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        transition: .3s;
        opacity: 0;
        display: block;
    }
    .image-wrapper a:hover{
        scale: 1.05;
        box-shadow: 0 0 20px black;
        transition: all .2s;
    }
    .image-wrapper a:active {
        scale: 1;
        box-shadow: inset 0 0 5px black;
        transition: all 0s;
    }
    .image-wrapper:hover img {
        transform: scale(1.2) translateY(5%);
        opacity: .4;
    }
    .image-wrapper:hover a {
        opacity: 1;
    }
    /* ********** */
    /* PROJECTS */
    .media-scroller{
        grid-auto-columns: calc(25% - 1.5vw);
    }
    .card:hover .card-bg{
        filter: blur(3px);
        -webkit-filter: blur(3px);
        opacity: .7;
        transition: all .2s ease-out;
    }
    .card a:hover{
        background-color: white;
        color: black;
        box-shadow: var(--card-shadow);
        transition: all .2s;
    }
    /* .card a{
        width: 30%;
        padding: 0.5rem;
        text-align: center;
    } */
    /* ******** */
    /* CONTACT */
    .contact-info a:hover {
        color: var(--secondary-color);
    }
}

